# maya-viewport-2.0-optimizer

./: README.md  installer.mel  my_plugin.py  pyproject.toml  viewport_2_optimizer.py
