[build-system]
requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"


[tool.setuptools]
py_modules = ["viewport_2_optimizer"]


[project]
name = "viewport_2_optimizer"
authors = [
    {name = "Hannes"},
]
description = "viewport_2_optimizer"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["maya", "plugin"]
# license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
# dynamic = ["version"]
version = "0.0.1"

# [project.optional-dependencies]
# yaml = ["pyyaml"]

# [project.scripts]
# my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/maya-viewport-2.0-optimizer"
